// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordForm disables button correctly 1`] = `
<form>
  <Panel.Section>
    <Stack>
      <Field
        autoComplete="current-password"
        component={[Function]}
        id="currentPassword"
        label="Current Password"
        name="currentPassword"
        type="password"
        validate={[Function]}
      />
      <Field
        autoComplete="new-password"
        component={[Function]}
        id="newPassword"
        label="New Password"
        name="newPassword"
        type="password"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
          ]
        }
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={true}
      submit={true}
      variant="secondary"
    >
      Update Password
    </Button>
  </Panel.Section>
</form>
`;

exports[`PasswordForm should render correctly 1`] = `
<form>
  <Panel.Section>
    <Stack>
      <Field
        autoComplete="current-password"
        component={[Function]}
        id="currentPassword"
        label="Current Password"
        name="currentPassword"
        type="password"
        validate={[Function]}
      />
      <Field
        autoComplete="new-password"
        component={[Function]}
        id="newPassword"
        label="New Password"
        name="newPassword"
        type="password"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
          ]
        }
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={true}
      submit={true}
      variant="secondary"
    >
      Update Password
    </Button>
  </Panel.Section>
</form>
`;

exports[`PasswordForm should render correctly when updating 1`] = `
<form>
  <Panel.Section>
    <Stack>
      <Field
        autoComplete="current-password"
        component={[Function]}
        id="currentPassword"
        label="Current Password"
        name="currentPassword"
        type="password"
        validate={[Function]}
      />
      <Field
        autoComplete="new-password"
        component={[Function]}
        id="newPassword"
        label="New Password"
        name="newPassword"
        type="password"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
          ]
        }
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={true}
      submit={true}
      variant="secondary"
    >
      Updating Password
    </Button>
  </Panel.Section>
</form>
`;
